# PVZ-manager

./: Cargo.toml  build.rs  game_id.json  prompt.md
.github/workflows/: rust.yml
blobs/: game_id.json
src/: cli.rs  file_io.rs  gui.rs  main.rs  models.rs
