[package]
name = "pvz-manager"
version = "0.1.0"
edition = "2024"

[features]
default = []
large-font = []

[dependencies]
eframe = "0.32"
egui = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
walkdir = "2.0"
dirs = "5.0"
winapi = { version = "0.3", features = ["winuser", "windef", "processthreadsapi", "shellapi"] }
